claim batch update processing; security update

--- a/app/views/edt_files/_edt_file.html.erb
+++ b/app/views/edt_files/_edt_file.html.erb
@@ -7,6 +7,7 @@
         <% end %>
 
         <td><%= edt_file.ftype_str %></td>
+        <td><%= edt_file.seq_no %></td>
 	<td>
 	<% if doc %>
           <%= doc.lname %>
