--- a/app/views/edt_files/index.html.erb
+++ b/app/views/edt_files/index.html.erb
@@ -7,6 +7,7 @@
       <tr>
 	  <th class='tbl_md'><%= sortable 'filename', 'File' %></th>
 	  <th class='tbl_md'><%= sortable 'ftype', 'Type' %></th>
+	  <th class='tbl_md'><%= sortable 'seq_no', 'Seq No' %></th>
           <th class='tbl_md'><%= sortable 'provider_no', 'Provider' %></th>
 	  <th><%= sortable 'upload_date', 'Uploaded' %></th>
 	  <th cless='tbl_md'>Doctors</th>
