--- a/app/views/edt_files/_edt_file.html.erb
+++ b/app/views/edt_files/_edt_file.html.erb
@@ -7,7 +7,7 @@
         <% end %>
 
         <td><%= edt_file.ftype_str %></td>
-        <td><%= edt_file.seq_no %></td>
+	<td><%= edt_file.batch_no %></td> <!-- from model -->
 	<td>
 	<% if doc %>
           <%= doc.lname %>
@@ -18,6 +18,7 @@
 	<td><%= edt_file.claims %></td>
 	<td><%= edt_file.services %></td>
 	<td><%= sprintf("$%.2f",edt_file.total_amount) %></td>
+	<td><%= edt_file.processed ? 'Processed':''  %> </td>
 	<% if edt_file.filespec.present? && File.exists?(edt_file.filespec) %>
            <td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_edt_file_path(edt_file)  %></td>
         <% else %>
