dropbox downloader script; few minor changes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="spacer-10"></div>
 <div id='logo' style="padding:20px">
-<img src='/images/clinic.jpg' width="480px"></img>
+<img src='/images/clinic.jpg' width="480"></img>
 </div>
 
 <div class="hdr-text">We are open every day!  </div> 
@@ -44,7 +44,7 @@ Call to confirm: <b>(905) 561-9255</b>
   
 <div class='spacer-30'></div>
   <span style="width:250px; float:right; margin-right: 20px;">
-  <img src='/images/map.png' width="240px"></img>
+  <img src='/images/map.png' width="240"></img>
   <div class="caption-text"><a href="https://medimap.ca/Stoney-Creek-Medical-Walk-In-Clinic" target="_new">Show current Wait Time</a></div> 
   </span>
 </div>
