--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -22,7 +22,7 @@
   </tbody>
 </table>
 
-<div class="bottom_buttons ">
+<div class="bottom_nav">
 <%= will_paginate @charts,  class: "btn" %>
 </div>
 
