--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+  <div class="container">
     <div id="header"> 
     <%= render 'layouts/navigation' %>
     </div>
@@ -15,6 +16,7 @@
       <%= render 'layouts/messages' %>
       <%= yield %>
    </div>
+  </div>
 
    <div id="footer">
       <%= render 'layouts/footer'  %>
