--- a/app/views/letters/index.html.erb
+++ b/app/views/letters/index.html.erb
@@ -21,6 +21,6 @@
   </tbody>
 </table>
 
-<div class="bottom_buttons ">
+<div class="bottom_nav">
 <%= will_paginate @letters, class: "btn" %>
 </div>
