--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -151,10 +151,11 @@
 
 <div class="row">
   <div class="col-sm-12">
-  <%= f.button :submit, yield(:button_text), class: "btn btn-primary" %>
+  <%= f.button :submit, 'Save Record', class: "btn btn-primary" %>
   </div>
 </div>
 
+<div class="spacer-20"></div>
 <% end %>
 
 <script>
