--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -50,6 +50,6 @@
   </tbody>
 </table>
 
-<div class="bottom_buttons ">
+<div class="bottom_nav">
 <%= will_paginate @claims, params: {filter_doc_id: @doc_id, adjusted: @adjusted}, class: "btn" %> 
 </div>
