--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -62,7 +62,7 @@
 </table>
 
 <% if @daysheet.any? %>
-<div class="bottom_buttons ">
+<div class="bottom_nav">
 <%= will_paginate @daysheet, class: "btn" %> 
 </div>
 <% end %>
