--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -2,7 +2,6 @@
 <%= render "shared/modal", size: 'lg' %>
 
 <table class="tbl2 table-hover table-striped table-bordered" >
-  <caption>Full list of doctors</caption>
   <thead>
       <tr>
           <th class='tbl_lmd'>Name</th>
@@ -30,7 +29,12 @@
   </tbody>
 </table>
 
+<div class="row">
 <div class="bottom_buttons ">
+<%= button_to "Add New Doctor", new_doctor_path, class: "btn btn-primary col-md-2", method: :get %>
+</div>
+
+<div class="bottom_nav">
 <%= will_paginate @doctors, class: "btn" %>
-<%= button_to "Add New Doctor", new_doctor_path, class: "btn btn-primary col-md-12", method: :get %>
+</div>
 </div>
