--- a/app/views/edt_files/index.html.erb
+++ b/app/views/edt_files/index.html.erb
@@ -28,6 +28,6 @@
   </tbody>
 </table>
 
-<div class="bottom_buttons ">
+<div class="bottom_nav">
 <%= will_paginate @edt_files, class: "btn" if @edt_files %> 
 </div>
