--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -24,6 +24,6 @@
   </tbody>
 </table>
 
-<div class="bottom_buttons ">
+<div class="bottom_nav">
 <%= will_paginate @invoices, class: "btn" %>
 </div>
