--- a/app/views/patients/_new.html.erb
+++ b/app/views/patients/_new.html.erb
@@ -1,10 +1,10 @@
 <%
-   provide(:title, 'Edit Patient')
+   provide(:title, 'New Patient')
 %>
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %> - Edit Patient Record</b>
+	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>: New Patient Record</b>
 </div>
 <div class="modal-body">
  <div class="well">
