--- a/app/views/patients/new.js.erb
+++ b/app/views/patients/new.js.erb
@@ -1,6 +1,3 @@
-//alert ("new.js.erb called <%= @patient.full_name %>");
-//$('#result').html("<h4><%= flash[:info] %><font color=red> <%= flash[:danger] %> </font></h4><%= j render 'form' %>");
-$('#result').html("<h1>New Patient's Record</h1><%= j render 'form' %>");
-$('#page').hide();
-$('.alert').hide();
+$("#modal-window").find(".modal-content").html("<%= j render 'new' %>");
+$("#modal-window").modal();
 
