--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -2,7 +2,6 @@
 <%= render "shared/modal", size: 'lg' %>
 
 <table class="tbl2 table-hover table-striped table-bordered" >
-  <caption>Full list of service codes</caption>
   <thead>
       <tr>
 	  <th><%= sortable 'code', 'Svc Code' %></th>
@@ -29,9 +28,14 @@
   </tbody>
 </table>
 
+<div class="row">
 <div class="bottom_buttons ">
-<%= will_paginate @procedures, class: "btn" %>
 <% unless current_user.doctor? %>
-<%= button_to "Add Procedure", new_procedure_path, class: "btn btn-primary col-md-12", :method => "get" %>
+<%= button_to "Add Procedure", new_procedure_path, class: "btn btn-primary col-md-2", :method => "get" %>
 <% end %>
+</div>
+
+<div class="bottom_nav">
+<%= will_paginate @procedures, class: "btn" %>
+</div>
 </div>
