--- a/app/views/vaccines/index.html.erb
+++ b/app/views/vaccines/index.html.erb
@@ -2,11 +2,10 @@
 <%= render "shared/modal", size: 'lg' %>
 
 <table class="tbl2 table-hover table-striped table-bordered" >
-  <caption>Full list of vaccines</caption>
   <thead>
       <tr>
           <th class="tbl_md">Name</th>
-          <th class="tbl_md">Target</th>
+          <th class="tbl_lg">Target</th>
           <th>Route</th>
 	  <th>Dose</th>
 	  <th>DIN</th>
@@ -26,7 +25,12 @@
   </tbody>
 </table>
 
+<div class="row">
 <div class="bottom_buttons ">
+<%= button_to "Add New Vaccine", new_vaccine_path, class: "btn btn-primary col-md-2", :method => "get" %>
+</div>
+
+<div class="bottom_nav">
 <%= will_paginate @vaccines, class: "btn" %>
-<%= button_to "Add New Vaccine", new_vaccine_path, class: "btn btn-primary btn-block", :method => "get" %>
+</div>
 </div>
