new patient modal added

--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -158,7 +158,7 @@
 <div class="spacer-20"></div>
 <% end %>
 
-<script>
+<script defer>
 $('body').tooltip({ selector: "[data-toggle~='tooltip']"});
 $(document).ready(function () {
 // Show maiden name text field for female patients 
