--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -165,7 +165,7 @@
 
 <% end %>
 
-<script>
+<script defer>
 $(document).ready(function() {
 
 //    $.fn.select2.defaults.set( "theme", "classic" );
