--- a/app/views/layouts/_billing.html.erb
+++ b/app/views/layouts/_billing.html.erb
@@ -7,5 +7,6 @@
 <li><%= link_to "Unpaid Claims", unpaid_visits_path  %> </li>
 <li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
 <li> <%= link_to "MHO RA Messages", ra_messages_path, method: :get %> </li>
+<li><%= link_to "Visits This Cycle", billed_visits_path  %> </li>
 </ul>
 </li>
