--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -583,9 +583,20 @@ table.pretty {
 
 .pre-scrollable-xlg {
     max-height: 700px;
-    overflow-y: scroll;
-    overflow-x: scroll;
+    overflow: auto;
+
     margin-bottom: 35px;
+}
+
+// Chrome doesn't display scrollbar sometimes. Force it.
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
 
 .notes {
