Appended help file; modals in help; cosmetic changes

--- a/app/views/edt_files/index.html.erb
+++ b/app/views/edt_files/index.html.erb
@@ -28,6 +28,7 @@
   </tbody>
 </table>
 
+<div class="row">
 <div class="bottom_nav">
 <%= will_paginate @edt_files, class: "btn" if @edt_files %> 
 </div>
