--- a/app/views/reports/_show.html.erb
+++ b/app/views/reports/_show.html.erb
@@ -5,7 +5,7 @@
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @doctor.lname %>: Claims Report for <%= @report.sdate %></b>
+	<b class="modal-title" id="myModalLabel">Dr. <%= @doctor.lname %>: Claims Report for <%= @report.sdate %></b>
 </div>
 <div class="modal-body">
 	<iframe id="myModal" src="/reports/<%= @report.id %>" frameborder="0" width="100%" height="600px"></iframe>
