--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,17 +35,15 @@ Call to confirm: <b>(905) 561-9255</b>
   </div>
 </section>
 
-<div class='spacer-20'></div>
-
-<div align="right">
-  <span style="width:500px; float:left; margin-left: 20px; ">
+<div class="row">
+  <span style="width:420px; float:left; margin-left: 20px; ">
   <%= render "schedules/full_schedule" %>
   </span>
   
-<div class='spacer-30'></div>
-  <span style="width:250px; float:right; margin-right: 20px;">
-  <img src='/images/map.png' width="240"></img>
+  <span style="width:250px; float:right; margin-top: 12px; margin-right: 20px;">
   <div class="caption-text"><a href="https://medimap.ca/Stoney-Creek-Medical-Walk-In-Clinic" target="_new">Show current Wait Time</a></div> 
+  <img src='/images/map.png' width="240"></img>
   </span>
 </div>
+<div class='spacer-10'></div>
 
