Disabled Billing Type/HC# modifications for patients with previously billed visits

--- a/app/views/patients/_edit.html.erb
+++ b/app/views/patients/_edit.html.erb
@@ -13,6 +13,6 @@
 </div>
 
 <div class="modal-footer">
-	<small> * Required for HCP/WCB/RMB patients </small>
+	<small> * Required for HCP/WCB/RMB patients; HC# and Billing Type cannot be changed for patients with previous visits </small>
 </div>
 
