favicon added, patient form modified

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title><%= full_title(yield(:title)) %></title>
     <%= render 'layouts/rails_default' %>  
     <%# render 'layouts/shim' %>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="16x16" />
   </head>
 
   <body>
