--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,7 @@
 <footer>
   <small>
-    <img src="/images/small_logo.png" width="35"></img>
+    <!--img src="/images/small_logo.png" width="35"></img>-->
+    <img src="/favicon.ico" width="16"></img>
     The <a href="<%= project_url %>"><%= full_title %></a> project -  &copy; 2018 - All rights reserved
   </small>
   <nav>
